--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
       <artifactId>schema-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.geonetwork-opensource</groupId>
+      <artifactId>schema-iso19139</artifactId>
+      <version>3.1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
